# tiny-optional

./: .clang-format  .gitignore  CMakeLists.txt  README.md  tiny-optional.sln
.github/: FUNDING.yml
.github/workflows/: test_clang_linux.yml  test_clang_mac.yml  test_clang_win.yml  test_gcc_linux.yml  test_gcc_win.yml  test_msvc_win.yml
TinyOptionalTests/: TestCompilationBase.cpp  TestCompilationBase.h  TestMsvcCompilation.cpp  TestUtilities.h  Tests.cpp  Tests.vcxproj  TinyOptionalTests.vcxproj  TinyOptionalTests.vcxproj.filters  tiny-optional.sln
buildtimes/: compile_linux.sh  compile_msvc.ps1  create_code.py  merge_results.py  plot.plt  postprocess_results.py  run_all.ps1
buildtimes/unique_types/: result_linux.csv  result_merged.csv  result_msvc.csv  result_tiny_concept_vs_no_concept.csv  std.cpp  (+4 more)
include/: tiny_optional.natvis
performance/: main.cpp  makefile  performance.sln  performance.vcxproj  plot.plt
tests/: ComparisonTests.cpp  ComparisonTests.h  CompilationBase.cpp  CompilationBase.h  CompilationErrorTests.cpp  CompilationErrorTests.h  ConstructionTests.cpp  ConstructionTests.h  ExerciseOptionalAIP.cpp  ExerciseOptionalAIP.h  ExerciseOptionalEmptyViaType.cpp  ExerciseOptionalEmptyViaType.h  ExerciseOptionalInplace.cpp  ExerciseOptionalInplace.h  ExerciseOptionalWithCustomFlagManipulator.cpp  ExerciseOptionalWithCustomFlagManipulator.h  ExerciseStdOptional.cpp  ExerciseStdOptional.h  ExerciseTinyOptional.cpp  ExerciseTinyOptional.h  ExerciseTinyOptionalPayload.cpp  ExerciseTinyOptionalPayload.h  ExerciseTinyOptionalPayload1.cpp  ExerciseTinyOptionalPayload2.cpp  ExerciseTinyOptionalPayload3.cpp  ExerciseTinyOptionalPayload4.cpp  Exercises.h  GccLikeCompilation.cpp  GccLikeCompilation.h  IntermediateTests.cpp  IntermediateTests.h  MsvcCompilation.cpp  MsvcCompilation.h  NatvisTests.cpp  NatvisTests.h  SpecialMonadicTests.cpp  SpecialMonadicTests.h  TestCompilationBase.cpp  TestGccLikeCompilation.cpp  TestGccLikeCompilation.h  (+12 more)
(+2 files in other folders)
